--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -183,7 +183,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/trivy
-          key: trivy-cache-${{ github.workflow }}-${{ github.ref_name }}-${{ hashFiles('Dockerfile') }}-${{ format('{{yyyy-MM-dd}}', github.event.repository.updated_at) }}
+          key: trivy-cache-${{ github.workflow }}-${{ github.ref_name }}-${{ hashFiles('Dockerfile') }}-${{ github.run_id }}
           restore-keys: |
             trivy-cache-${{ github.workflow }}-${{ github.ref_name }}-
             trivy-cache-${{ github.workflow }}-
@@ -198,55 +198,109 @@ jobs:
         env:
           TRIVY_NO_PROGRESS: true
           TRIVY_CACHE_DIR: ~/.cache/trivy
+          MAX_SARIF_RUNS: 18 # GitHub limit is 20, leave some buffer
         run: |
           trivy --cache-dir ~/.cache/trivy image --download-db-only
-          # Only scan changed files in PRs and pushes
+
+          # Get changed directories
           if [ "${{ github.event_name }}" == "pull_request" ]; then
-            # For PRs, ensure we fetch the base branch first
-            git fetch origin ${{ github.base_ref }} || echo "Could not fetch base branch, falling back to minimal scan"
+            git fetch origin ${{ github.base_ref }} || echo "Could not fetch base branch"
             if git rev-parse --verify origin/${{ github.base_ref }} >/dev/null 2>&1; then
-              CHANGED_DIRS=$(git diff --name-only --diff-filter=ACMRT origin/${{ github.base_ref }} ${{ github.sha }} | xargs -n1 dirname 2>/dev/null | sort -u | tr '\n' ' ')
+              CHANGED_DIRS=$(git diff --name-only --diff-filter=ACMRT origin/${{ github.base_ref }} ${{ github.sha }} | xargs -n1 dirname 2>/dev/null | sort -u)
             else
-              echo "Base branch not found, performing minimal scan"
               CHANGED_DIRS=""
             fi
           else
-            # For pushes, try to get changed directories in the last commit
             if git rev-parse --verify HEAD^ >/dev/null 2>&1; then
-              CHANGED_DIRS=$(git diff --name-only --diff-filter=ACMRT HEAD^ HEAD | xargs -n1 dirname 2>/dev/null | sort -u | tr '\n' ' ')
+              CHANGED_DIRS=$(git diff --name-only --diff-filter=ACMRT HEAD^ HEAD | xargs -n1 dirname 2>/dev/null | sort -u)
             else
-              echo "Unable to determine changed files (possibly first commit or shallow clone)"
               CHANGED_DIRS=""
             fi
           fi
 
+          # Group directories into larger chunks to reduce the number of scans
+          mkdir -p trivy-scans
+
           if [ -n "$CHANGED_DIRS" ]; then
-            echo "Scanning directories with changes: $CHANGED_DIRS"
-            # For each changed directory, run a separate scan
-            for dir in $CHANGED_DIRS; do
-              if [ -d "$dir" ]; then
-                echo "Scanning directory: $dir"
-                # Sanitize directory name for the output file (replace / with _)
-                safe_name=$(echo "$dir" | tr '/' '_')
-                trivy fs --format sarif --output "trivy-${safe_name}.sarif" --severity CRITICAL,HIGH "$dir"
-              fi
-            done
-            # Combine SARIF reports if multiple exist
+            # Count number of directories
+            DIR_COUNT=$(echo "$CHANGED_DIRS" | wc -l)
+            echo "Found $DIR_COUNT changed directories"
+
+            if [ $DIR_COUNT -gt $MAX_SARIF_RUNS ]; then
+              echo "Too many directories changed ($DIR_COUNT), consolidating scans"
+
+              # Create up to MAX_SARIF_RUNS batch files with directories to scan
+              BATCH_SIZE=$(( DIR_COUNT / MAX_SARIF_RUNS + 1 ))
+              BATCH_NUM=1
+
+              # Create batch files
+              echo "$CHANGED_DIRS" | while read -r dir; do
+                if [ -d "$dir" ]; then
+                  echo "$dir" >> "trivy-scans/batch_$BATCH_NUM.txt"
+                  CURRENT_COUNT=$(wc -l < "trivy-scans/batch_$BATCH_NUM.txt")
+                  if [ $CURRENT_COUNT -ge $BATCH_SIZE ] && [ $BATCH_NUM -lt $MAX_SARIF_RUNS ]; then
+                    BATCH_NUM=$((BATCH_NUM + 1))
+                  fi
+                fi
+              done
+
+              # Scan each batch
+              for batch_file in trivy-scans/batch_*.txt; do
+                BATCH_NAME=$(basename "$batch_file" .txt)
+                echo "Scanning batch: $BATCH_NAME"
+                DIRS_TO_SCAN=$(cat "$batch_file" | tr '\n' ' ')
+                trivy fs --format sarif --output "trivy-$BATCH_NAME.sarif" \
+                  --severity CRITICAL,HIGH $DIRS_TO_SCAN
+              done
+            else
+              # We're under the limit, scan each directory separately
+              echo "Scanning each directory separately"
+              for dir in $CHANGED_DIRS; do
+                if [ -d "$dir" ]; then
+                  echo "Scanning directory: $dir"
+                  # Sanitize directory name for the output file
+                  safe_name=$(echo "$dir" | tr '/' '_')
+                  trivy fs --format sarif --output "trivy-${safe_name}.sarif" \
+                    --severity CRITICAL,HIGH "$dir"
+                fi
+              done
+            fi
+
+            # Combine SARIF reports
             if [ $(ls -1 trivy-*.sarif 2>/dev/null | wc -l) -gt 1 ]; then
-              echo "Combining multiple SARIF reports"
-              # Properly combine SARIF files - this merges the 'runs' arrays from all files
-              jq -s '{ "$schema": .[0]["$schema"], version: .[0].version, runs: [ .[].runs[] ] }' trivy-*.sarif > trivy-results.sarif
+              echo "Combining SARIF reports, limiting to $MAX_SARIF_RUNS runs"
+
+              # Extract runs from each file, limiting to MAX_SARIF_RUNS total runs
+              jq -s -c '{
+                "$schema": .[0]["$schema"],
+                version: .[0].version,
+                runs: [
+                  .[].runs[]
+                ]
+              } | if (.runs | length > '${MAX_SARIF_RUNS}') then
+                  (.runs=.runs[0:'${MAX_SARIF_RUNS}'])
+                else
+                  .
+                end' trivy-*.sarif > trivy-results.sarif
+
+              # Check run count in final file
+              RUN_COUNT=$(jq '.runs | length' trivy-results.sarif)
+              echo "Final SARIF file contains $RUN_COUNT runs (limit: $MAX_SARIF_RUNS)"
             elif [ $(ls -1 trivy-*.sarif 2>/dev/null | wc -l) -eq 1 ]; then
               echo "Using single SARIF report"
               mv trivy-*.sarif trivy-results.sarif
             else
-              # Create an empty SARIF report if no scans were performed
+              # Create an empty SARIF report
               echo "No SARIF reports generated, creating empty template"
               echo '{"version":"2.1.0","$schema":"https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json","runs":[]}' > trivy-results.sarif
             fi
           else
-            echo "No relevant directories changed, performing minimal scan"
-            trivy fs --format sarif --output trivy-results.sarif --severity CRITICAL,HIGH --skip-dirs="tests/" --skip-dirs=".github/" .
+            echo "No changed directories detected, performing targeted scan of key areas"
+            # Scan specific high-risk directories instead of the entire codebase
+            trivy fs --format sarif --output trivy-results.sarif \
+              --severity CRITICAL,HIGH \
+              --skip-dirs="tests/" --skip-dirs=".github/" \
+              src/ k8s/
           fi
 
       - name: Upload Trivy SARIF results
@@ -487,7 +541,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/trivy
-          key: trivy-container-cache-${{ github.workflow }}-${{ github.ref_name }}-${{ hashFiles('Dockerfile') }}-${{ format('{{yyyy-MM-dd}}', github.event.repository.updated_at) }}
+          key: trivy-container-cache-${{ github.workflow }}-${{ github.ref_name }}-${{ hashFiles('Dockerfile') }}-${{ github.run_id }}
           restore-keys: |
             trivy-container-cache-${{ github.workflow }}-${{ github.ref_name }}-
             trivy-container-cache-${{ github.workflow }}-
